...
    >
      <View
        style={[spacingStyles.mT30, spacingStyles.pH20, positionStyles.rowFill]}
      >
        <Image source={logo} style={styles.logoImage} />
        <TouchableOpacity onPress={onSkip}>
          <Text style={styles.skipText} testID="features_skip">
            {i18n.t('skip')}
          </Text>
        </TouchableOpacity>
      </View>
      <View>
        <Carousel
...
