...
    }
  }

  return (
    <SafeAreaView
      style={[styles.container, { backgroundColor: colors.WHITE }]}
      testID="welcome_screen"
    >
      <View style={styles.whiteBlock}>
        <Text style={styles.theBestText}>
          <Text style={{ color: colors.LIGHT_RED }}>{'Pomodizer\n'}</Text>
          {i18n.t('the_best_planner')}
        </Text>
...
