...
  }

  return (
    <SafeAreaView
      style={[layoutStyles.safeAreaView]}
      edges={['right', 'top', 'left']}
      testID="dashboard_screen"
    >
      <StatusBar barStyle="dark-content" backgroundColor="white" />

      <DmView style={[styles.header, positionStyles.rowFill]}>
        <StatsItem label={i18n.t('alltasks')} value={statsInfo.allTasks} />
        <StatsItem
...
